2014-08-13  Hani Benhabiles <hani.benhabiles@greenbone.net>

	Finish removal of pause feature.

	* src/gsad.c (init_validator): Don't validate pause_task and
	resume_paused_task.
	(exec_omp_post): Remove paused and resume paused tasks handling.

	* src/gsad_omp.c (pause_task_omp, resume_paused_task_omp): Delete
	functions.

	* src/gsad_omp.h: Remove deleted functions prototypes.

	* src/html/classic/gsad.xsl (pause_task_response)
	(resume_paused_task_response): Remove templates.
	(html-gsa-logo): Don't apply removed templates.

	* src/html/classic/help.xsl (reports.html, tasks.html): Remove
	references to pause feature.

	* src/html/classic/omp.xsl (pause-icon): Remove template.
	(task-icons, report [report], get_task): Remove references and handling
	of pause feature.
	(pause_task_response, resume_paused_task_response): Remove templates.

2014-08-13  Matthew Mundell <matthew.mundell@greenbone.net>

	* src/gsad_omp.c (new_tag, save_tag_omp): Remove manager_connect.
	Session was not being used used, and was not being closed in
	save_tag_omp.
	(authenticate_omp): Close session, otherwise Manager process wait around
	for more input.

2014-08-08  Hani Benhabiles <hani.benhabiles@greenbone.net>

	* src/html/classic/omp.xsl (result [result-headers]): Remove checking of
	description value in oval definitions' case as nvt oid value is set
	correctly now.
	(result [result-body]): Use the NVT's oid to check for oval definitions
	instead of the description's value.

2014-08-08  Timo Pollmeier <timo.pollmeier@greenbone.net>

	* src/html/classic/omp.xsl (dfn_cert_adv-details): Split CVE elements
	in case they contain a list of CVEs, fix or filter out invalid CVE-IDs.

2014-08-07  Timo Pollmeier <timo.pollmeier@greenbone.net>

	Add help for CERT-Bund Advisories.

	* src/html/classic/help.xsl (contents.html): Add links to pages
	"CERT-Bund Advisories" and "CERT-Bund Advisory Details".
	(cert_bund_adv_details.html): New template.
	(glossary.html): Add section "CERT-Bund Advisory".